--- a/WebL2/Styles.css
+++ b/WebL2/Styles.css
@@ -3,6 +3,8 @@
     margin: 0px;
 }
 body {
+    background-image: url(images/Background.png);
+    background-size: cover;
     height: 100vh;
     display: grid;
     grid-template-columns: 0.75fr 1fr 1fr;
