--- a/WebL2/Styles.css
+++ b/WebL2/Styles.css
@@ -2,11 +2,35 @@
     padding: 0px;
     margin: 0px;
 }
+
 body {
-    background-image: url(images/Background.png);
+    background-image: url(images/bg.jpg);
     background-size: cover;
     height: 100vh;
     display: grid;
     grid-template-columns: 0.75fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
+}
+
+nav {
+    grid-column: 1/2;
+    grid-row: 1/3;
+    background-color: rgba(0, 0, 0, .7);
+    margin: 30px;
+
+    display: grid;
+    grid-template-rows: 250px 100px 100px 100px;
+    grid-gap: 40px;
+}
+
+nav img {
+    margin: 50px;
+}
+
+nav a {
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
+    text-align: center;
+    color: white;
+    text-decoration: none;
+    font-size: 100px;
 }
