--- a/Styles.css
+++ b/Styles.css
@@ -2,6 +2,7 @@
     padding: 0px;
     margin: 0px;
 }
+
 body {
     background-image: url(images/bg.jpg);
     background-size: cover;
@@ -10,13 +11,52 @@ body {
     grid-template-columns: 0.75fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
 }
+
 nav {
     grid-column: 1/2;
     grid-row: 1/3;
     background-color: rgba(0, 0, 0, .7);
     margin: 30px;
+
+    display: grid;
+    grid-template-rows: 250px 100px 100px 100px;
+    grid-gap: 40px;
 }
 
 nav img {
     margin: 50px;
+}
+
+nav a {
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
+    text-align: center;
+    color: white;
+    text-decoration: none;
+    font-size: 60px;
+}
+
+.promo1 {
+    grid-row: 2/3;
+    grid-column: 2/3;
+    justify-self: right;
+    border: 5px solid white;
+    margin: 40px;
+}
+
+.promo2 {
+    grid-row: 2/3;
+    grid-column: 3/4;
+    justify-self: right;
+    border: 5px solid white;
+    margin: 40px;
+
+}
+
+.promo3 {
+    grid-row: 1/2;
+    grid-column: 3/4;
+    justify-self: right;
+    border: 5px solid white;
+    margin: 40px;
+
 }
