--- a/Styles.css
+++ b/Styles.css
@@ -72,6 +72,8 @@ nav a {
     justify-self: center;
     align-self: center;
     color: white;
+    font-size: 70px;
+    text-align: center;
 }
 /* .slide-container {
     grid-row: 1/3;
@@ -95,6 +97,7 @@ nav a {
       grid-row: span 2;
       list-style: none;
       height: 90%;
+      border: 5px solid white;
   }
 
   li {
