--- a/Styles.css
+++ b/Styles.css
@@ -43,6 +43,11 @@ nav a {
     font-size: 60px;
 }
 
+nav a:hover {
+    color: red;
+    text-decoration: underline;
+}
+
 .promo1 {
     grid-row: 2/3;
     grid-column: 2/3;
@@ -80,22 +85,6 @@ nav a {
     font-family: bozo;
 }
 
-/* .slide-container {
-    grid-row: 1/3;
-    grid-column: 2/4;
-    background-color: rgba(0, 0, 0, .7);
-    width: 80%;
-    height: 80%;
-    justify-self: center;
-}
-[data-component="slideshow"] .slide {
-    display: none;
-  }
-
-  [data-component="slideshow"] .slide.active {
-    display: block;
-  } */
-
 ul {
     background-color: rgba(0, 0, 0, 0.5);
     grid-column: span 2;
@@ -121,4 +110,16 @@ li img {
     height: 700px;
     align-self: center;
     justify-self: center;
+}
+
+.textbox {
+    grid-column: span 2;
+    grid-row: span 2;
+    background-color: rgba(0, 0, 0, 0.5);
+    height: 90%;
+    width: 95%;
+    border: 5px solid white;
+    font-family: bozo;
+    color: white;
+    font-size: 65px;
 }
