--- a/Styles.css
+++ b/Styles.css
@@ -3,12 +3,18 @@
     margin: 0px;
 }
 
+/*custom font*/
 @font-face {
     font-family: bozo;
     src: url(Fonts/salma_alfasans/SalmaAlfasans-Light.otf);
 }
 
-body {
+/* most content */
+section {
+    grid-row: span 2;
+    grid-column: span 2;
+    height: 100%;
+    width: 100%;
     background-image: url(images/bg.jpg);
     background-size: cover;
     height: 100vh;
@@ -17,24 +23,24 @@ body {
     grid-template-rows: 1fr 1fr;
     align-items: center;
 }
-
+/* navigation */
 nav {
     grid-column: 1/2;
     grid-row: 1/3;
     background-color: rgba(0, 0, 0, .7);
     margin: 30px;
     height: 90%;
-
     display: grid;
     grid-template-rows: 250px 100px 100px 100px;
     grid-gap: 40px;
 }
 
+/* logo */
 nav img {
     width: 80%;
     margin: 10px auto;
 }
-
+/* links */
 nav a {
     font-family: bozo;
     text-align: center;
@@ -42,18 +48,19 @@ nav a {
     text-decoration: none;
     font-size: 60px;
 }
-
+/* hover state */
 nav a:hover {
     color: red;
     text-decoration: underline;
 }
-
+/* promotional images */
 .promo1 {
     grid-row: 2/3;
     grid-column: 2/3;
     justify-self: right;
     border: 5px solid white;
     justify-self: center;
+    width: 70%;
 }
 
 .promo2 {
@@ -62,6 +69,7 @@ nav a:hover {
     justify-self: right;
     border: 5px solid white;
     justify-self: center;
+    width: 70%;
 }
 
 .promo3 {
@@ -70,21 +78,22 @@ nav a:hover {
     justify-self: right;
     border: 5px solid white;
     justify-self: center;
+    width: 70%;
 }
-
+/* text box on index */
 .box {
     background-color: black;
     border: 6px solid white;
-    width: 60%;
-    height: 70%;
+    width: 70%;
+    height: 80%;
     justify-self: center;
     align-self: center;
     color: white;
-    font-size: 65px;
+    font-size: 3.3vw;
     text-align: center;
     font-family: bozo;
 }
-
+/* slideshow */
 ul {
     background-color: rgba(0, 0, 0, 0.5);
     grid-column: span 2;
@@ -93,25 +102,25 @@ ul {
     height: 90%;
     border: 5px solid white;
 }
-
+/* slideshow text */
 li {
     color: white;
     text-align: center;
 }
-
+/* slideshow image */
 li img {
     width: 50%;
     margin: 20px auto;
 
 }
-
+/* slideshow image */
 #img {
     width: 400px;
     height: 700px;
     align-self: center;
     justify-self: center;
 }
-
+/* text box on about page */
 .textbox {
     grid-column: span 2;
     grid-row: span 2;
@@ -121,5 +130,5 @@ li img {
     border: 5px solid white;
     font-family: bozo;
     color: white;
-    font-size: 65px;
+    font-size: 3.5vw;
 }
